# oracle-observability-lab

./: .gitignore  README.md  docker-compose.yaml
chainlink-node-simulator/: Cargo.toml  Dockerfile
chainlink-node-simulator/src/: main.rs  metrics.rs  node.rs
grafana/provisioning/dashboards/: default.yml  node_health.json  slo_compliance.json
oracle-node-simulator/: Cargo.toml
prometheus/: prometheus.yml
prometheus/rules/: sli_recording_rules.yml  slo_alert_rules.yml
