[package]
name = "oracle-node-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Prometheus metrics
prometheus = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async utilities
futures = "0.3"
